--- a/memo/frontend/src/assets/scss/function.scss
+++ b/memo/frontend/src/assets/scss/function.scss
@@ -9,10 +9,12 @@
     }
 
     &.update {
+        border: 0;
         color: blue;
     }
 
     &.delete {
+        border: 0;
         color: red;
         margin: 0;
     }
