mypage component 완성
mypage 내용은 다음에 더 추가 예장

--- a/memo/frontend/src/assets/scss/function.scss
+++ b/memo/frontend/src/assets/scss/function.scss
@@ -6,19 +6,15 @@ $width-size: 750px;
 
 .btn {
 
-    &.done {
-        color: green;
-    }
-
-    &.revert {
-        color: yellow;
-    }
-
-    &.edit {
-        color: blue;
-    }
-
     &.delete {
         color: red;
+    }
+
+    &.mypage {
+        border: 2px solid;
+        padding: 10px;
+        margin-right: 10px;
+        font-weight: bold;
+        color: purple;
     }
 }
